# sserver

./: CMakeLists.txt  client.cpp  logger.cpp  main.cpp  server.cpp  sserver.h
test/: server_test.py
